2002-02-08  Philippe Elie  <ph_e@club-internet.fr>

	* TODO: update

	* module/oprofile_nmi.S: cut and copy from oprofile_nmi24.s
	* module/oprofile_nmi22.S: remove
	* module/oprofile_nmi22.S: remove
	* module/Makefile.in: reflect them

	* pp/opf_filter.cpp: do not print unit mask for RTC cpu type

	* doc/oprofile.sgml: document post-profile tools commons options

2002-02-05  Philippe Elie  <ph_e@club-internet.fr>

	* TODO: update mainly by moving things to 0.1

	* pp/opf_filter.h:
	* pp/opf_container.cpp: small cleanup + minor tweak to get
	  more reliable sort order on filename.

2002-02-05  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.h: declare create_artificial_symbol()
	* pp/oprofpp_util.cpp: show how elf symbols size could
	  be handled.

	* pp/oprofpp_util.cpp: add BSF_GLOBAL symbols to
	  symbols of interest.

2002-02-04  John Levon  <moz@compsoc.man.ac.uk>

	* module/oprofile.c: add [un]lock_sysctl
 
2002-02-04  John Levon  <moz@compsoc.man.ac.uk>

	* dae/oprofiled.h:
	* dae/oprofiled.c:
	* dae/opd_proc.c: free stuff on shutdown (to
	  clean dmalloc reports)
 
2002-02-03  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump to 0.1

	* TODO: update
 
2002-02-02  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump to 0.0.9
 
2002-02-02  John Levon  <moz@compsoc.man.ac.uk>

	* module/op_nmi.c: fix stupid bug spotted by Bob
	  Montgomery
 
2002-02-01  Philippe Elie  <ph_e@club-internet.fr>

	* module/compat.h: define REMAP_PAGE_RANGE
	* module/op_syscalls.c: use it (2.5.3 support)

2002-01-30  Philippe Elie  <ph_e@club-internet.fr>

	* module/compat.h:
	* module/op_nmi.c: re-add explicit constant for all MSR_
	  constants.

2002-01-30  Philippe Elie  <ph_e@club-internet.fr>

	* configure.in:
	* doc/oprofile.sgml:
	* module/compat22.h: remove support for kernel version
	  prior to 2.2.11

	* module/op_fixmap.c:
	* module/compat.h: small cleanup

	* module/oprofile.c: avoid multi-line literal string
