@@ -1,3 +1,13 @@
+2002-02-09  Bob Montgomery  <bobm@fc.hp.com>
+
+	* module/op_rtc.c: right actual RTC value back
+
+	* doc/oprofile.sgml: document that
+
+2002-02-09  John Levon  <moz@compsoc.man.ac.uk>
+
+	* module/op_init.c: set rtc cpu type directly
+ 
 2002-02-08  Philippe Elie  <ph_e@club-internet.fr>
 
 	* TODO: update
